fix(styles): bug introduced in 98bb586 where the looping section would be cut off on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1023,6 +1023,12 @@ footer div.discord-server-card svg {
 		background: none;
 	}
 
+	/* Hides workaround on mobile */
+	section.team-helpers .animation-wrapper .row-wrapper::before,
+	section.team-helpers .animation-wrapper .row-wrapper::after {
+		content: none;
+	}
+
 	section.update-signup {
 		margin-top: 0;
 		padding-top: 90px;
